# talib-rs

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  benchmark_results.json  pyproject.toml
.github/workflows/: ci.yml  release-crate.yml
benches/: generate_report.py
benches/python_benches/: bench_all_indicators.py  bench_vs_talib.py
crates/ta-rs-core/: Cargo.toml
crates/ta-rs-core/benches/: simd_bench.rs
crates/ta-rs-core/src/: common.rs  error.rs  lib.rs  ma_type.rs  simd.rs  sliding_window.rs  traits.rs
crates/ta-rs-core/src/cycle/: mod.rs
crates/ta-rs-core/src/math_operator/: mod.rs
crates/ta-rs-core/src/math_transform/: mod.rs
crates/ta-rs-core/src/momentum/: adx.rs  apo.rs  aroon.rs  bop.rs  cci.rs  dx.rs  macd.rs  mfi.rs  mod.rs  ppo.rs  roc.rs  rsi.rs  stoch.rs  ultosc.rs  willr.rs
crates/ta-rs-core/src/overlap/: dema.rs  ht_trendline.rs  kama.rs  mama.rs  mavp.rs  midpoint.rs  mod.rs  sar.rs  t3.rs  tema.rs  trima.rs  wma.rs
crates/ta-rs-core/src/pattern/: mod.rs
crates/ta-rs-core/src/price_transform/: mod.rs
crates/ta-rs-core/src/statistic/: mod.rs
crates/ta-rs-core/src/volatility/: atr.rs
crates/ta-rs-core/src/volume/: mod.rs
crates/ta-rs-python/: Cargo.toml
crates/ta-rs-python/src/: conversion.rs  func_api.rs  lib.rs  metadata.rs
crates/talib-rs-core/: Cargo.toml
crates/talib-rs-core/benches/: simd_bench.rs
crates/talib-rs-core/src/: error.rs  lib.rs  ma_type.rs  simd.rs  sliding_window.rs
crates/talib-rs-core/src/cycle/: mod.rs
crates/talib-rs-core/src/math_operator/: mod.rs
crates/talib-rs-core/src/math_transform/: mod.rs
crates/talib-rs-core/src/momentum/: adx.rs  aroon.rs  bop.rs  cci.rs  cmo.rs  dx.rs  macd.rs  mfi.rs  mod.rs  mom.rs  roc.rs  rsi.rs  stoch.rs  trix.rs  ultosc.rs  willr.rs
crates/talib-rs-core/src/overlap/: bbands.rs  dema.rs  ema.rs  ht_trendline.rs  kama.rs  ma.rs  mama.rs  mavp.rs  midpoint.rs  mod.rs  sar.rs  sma.rs  t3.rs  tema.rs  trima.rs  wma.rs
crates/talib-rs-core/src/pattern/: mod.rs
crates/talib-rs-core/src/price_transform/: mod.rs
crates/talib-rs-core/src/statistic/: mod.rs
crates/talib-rs-core/src/volatility/: atr.rs  mod.rs
crates/talib-rs-core/src/volume/: mod.rs
crates/talib-rs-python/: Cargo.toml
crates/talib-rs-python/src/: func_api.rs  lib.rs  metadata.rs
python/talib/: __init__.py  abstract.py  stream.py
python/talib_rs/: __init__.py  abstract.py  stream.py
tests/: benchmark_multi_dataset.py  test_exhaustive.py  test_full_coverage.py
tests/accuracy/: conftest.py  test_all_consistency.py  test_edge_cases.py  test_momentum.py  test_multi_dataset_alignment.py  test_overlap.py  test_real_data_alignment.py
