[workspace]
resolver = "2"
members = ["crates/talib-rs-core", "crates/talib-rs-python"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/0xcjun/talib-rs"

[workspace.dependencies]
thiserror = "2"
num-traits = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
