[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ta-rs"
version = "0.1.0"
description = "Pure Rust technical analysis library — drop-in replacement for TA-Lib"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy>=1.20"]

[tool.maturin]
manifest-path = "crates/ta-rs-python/Cargo.toml"
python-source = "python"
module-name = "talib._talib"
features = ["pyo3/extension-module"]
