[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "talib-rs"
version = "0.1.0"
description = "Pure Rust technical analysis library — drop-in replacement for TA-Lib"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy>=1.20"]

[tool.maturin]
manifest-path = "crates/talib-rs-python/Cargo.toml"
python-source = "python"
module-name = "talib_rs._talib"
features = ["pyo3/extension-module"]
