[package]
name = "ta-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust technical analysis library — drop-in replacement for TA-Lib"

[dependencies]
thiserror.workspace = true
num-traits.workspace = true
wide = { version = "0.7", optional = true }

[features]
default = ["simd"]
simd = ["wide"]

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simd_bench"
harness = false
