[package]
name = "ta-rs-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for ta-rs — drop-in replacement for TA-Lib"

[lib]
name = "_talib"
crate-type = ["cdylib"]

[dependencies]
ta-rs-core = { path = "../ta-rs-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
